# G5-Scheduel-Generator

./: LICENSE  README.md  env.sh  g5_generator.py  pyproject.toml  requirements.txt  setup.py
g5/: __init__.py  cli.py
g5/models/: __init__.py  schedule.py  set.py
g5/utils/: __init__.py  icalendar_export.py
